docs: remove tee command from Makefile

--- a/tex-example/Makefile
+++ b/tex-example/Makefile
@@ -22,9 +22,10 @@ $(index).bcf: $(index).bib
 	$(latex_compiler) $(index).tex
 
 %.tmp:: %.py
-	PYTHONPATH=$(PYTHONPATH):`pwd` python3 -B $^ | tee $@
+	PYTHONPATH=$(PYTHONPATH):`pwd` python3 -B $^
 	-sed -i "s/\\\\sffamily\\\\fontsize{.*}{.*}\\\\selectfont //g" */*.pgf
 	-sed -i "s/use as bounding box, clip/use as bounding box/g" */*.pgf
+	@touch $@
 
 .PHONY: clean
 clean:
